--- a/Client/iOS/EVSE/Base.lproj/Main_iPhone.storyboard
+++ b/Client/iOS/EVSE/Base.lproj/Main_iPhone.storyboard
@@ -13,7 +13,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
-                            <tableViewSection headerTitle="Gewünschte Ladezeit" footerTitle="Die oben angegebenen Zeiten sind nur Richtlinien. Diese können von der tatsächlichen Ladezeit abweichen." id="xeZ-Bi-z9f">
+                            <tableViewSection headerTitle="Gewünschte Ladezeit" id="xeZ-Bi-z9f">
+                                <string key="footerTitle">Die oben angegebenen Zeiten sind nur Richtlinien. Diese können von der tatsächlichen Ladezeit abweichen. Um so niedriger die Stundenanzahl ist, um so mehr Strom wird benötigt. Das heißt, dass Sie nachts mit mehr Strom laden sollen, als wie tagsüber.</string>
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="200" id="c9Y-yS-vSG">
                                         <rect key="frame" x="0.0" y="119" width="320" height="200"/>
@@ -221,7 +222,7 @@
             <objects>
                 <tabBarController definesPresentationContext="YES" id="Gge-92-nYS" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="f4c-Vj-lxT"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="rIR-V7-Iwd">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -288,6 +289,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="n0o-Bf-eza"/>
+        <segue reference="lqf-kz-cuy"/>
     </inferredMetricsTieBreakers>
 </document>
