--- a/Client/iOS/EVSE/Base.lproj/Main_iPad.storyboard
+++ b/Client/iOS/EVSE/Base.lproj/Main_iPad.storyboard
@@ -13,7 +13,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
-                            <tableViewSection headerTitle="Gewünschte Ladezeit" footerTitle="Die oben angegebenen Zeiten sind nur Richtlinien. Diese können von der tatsächlichen Ladezeit abweichen." id="jiU-WH-eBE">
+                            <tableViewSection headerTitle="Gewünschte Ladezeit" id="jiU-WH-eBE">
+                                <string key="footerTitle">Die oben angegebenen Zeiten sind nur Richtlinien. Diese können von der tatsächlichen Ladezeit abweichen. Um so niedriger die Stundenanzahl ist, um so mehr Strom wird benötigt. Das heißt, dass Sie nachts mit mehr Strom laden sollen, als wie tagsüber.</string>
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="200" id="jcg-F6-QC5">
                                         <rect key="frame" x="0.0" y="119" width="768" height="200"/>
@@ -120,40 +121,11 @@
         <scene sceneID="uqW-D6-iiP">
             <objects>
                 <tableViewController id="a2W-uf-PxX" customClass="ControllingTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="b2s-HK-eWD">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="b2s-HK-eWD">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <sections>
-                            <tableViewSection headerTitle="Überwachung" id="4SE-Fo-5k1">
-                                <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="hOv-BC-82a" detailTextLabel="xmH-Vo-MTo" style="IBUITableViewCellStyleValue1" id="0he-kf-fOX">
-                                        <rect key="frame" x="0.0" y="86" width="768" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0he-kf-fOX" id="0Oe-Vt-XwC">
-                                            <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="PWM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hOv-BC-82a">
-                                                    <rect key="frame" x="15" y="11" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Keiner" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xmH-Vo-MTo">
-                                                    <rect key="frame" x="704" y="11" width="49" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                        </sections>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="a2W-uf-PxX" id="qo8-lk-3e1"/>
                             <outlet property="delegate" destination="a2W-uf-PxX" id="Xa9-Ao-Tt4"/>
@@ -221,7 +193,7 @@
             <objects>
                 <tabBarController definesPresentationContext="YES" id="ilb-1n-p5S" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="lCg-2A-sWH"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="Po5-G1-ZmB">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
